Add Catalogue article grid view

--- a/Android/Shopking/app/src/main/res/values/strings.xml
+++ b/Android/Shopking/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Shopking</string>
-    <string name="menu_item_catalogoue_item_title">Catalogoue</string>
+    <string name="menu_item_catalogue_item_title">Catalogue</string>
     <string name="menu_item_shopping_list_item_title">Shopping List</string>
     <string name="menu_item_wish_list_item_title">Wish List</string>
     <string name="menu_item_recipes_item_title">Recipes</string>
     <string name="menu_item_information_item_title">Information</string>
+
+    <string name="article_list_item_image_description">Article image</string>
+    <string name="article_list_sale">%</string>
 </resources>
